started example of top boxes changing size as browser moves, had to move div tags together to get rid of spaces

--- a/first/index.html
+++ b/first/index.html
@@ -4,14 +4,10 @@
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body>
-		<div></div>
-		<div></div>
-		<div></div>
-		<div></div>
-		<div></div>
-		<div></div>
-		<div></div>
-		<div></div>
-		<div></div>
+		<div class="first-quarter"><div class="top-red"></div><div class="top-blue"></div><div class="top-gray"></div>
+		</div>
+		<div class="second-quarter"></div>
+		<div class="third-quarter"></div>
+		<div class="fourth-quarter"></div>
 	</body>
   </html
