final copiesgit status :)

--- a/first/index.html
+++ b/first/index.html
@@ -4,10 +4,22 @@
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body>
-		<div class="first-quarter"><div class="top-red"></div><div class="top-blue"></div><div class="top-gray"></div>
+		<div class="first-quarter">
+			<div class="top-red">
+			</div><div class="top-blue">
+			</div><div class="top-gray"></div>
 		</div>
-		<div class="second-quarter"></div>
-		<div class="third-quarter"></div>
-		<div class="fourth-quarter"></div>
+		<div class="second-quarter">
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed in turpis felis. Quisque orci enim, pharetra nec accumsan vitae, rhoncus at neque. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Phasellus posuere magna id libero scelerisque, non accumsan tellus mollis. Nullam porta, massa eu interdum aliquam, ante orci scelerisque sem, nec consectetur elit ante ullamcorper lorem. Aenean dapibus diam vel elementum ornare. Vestibulum aliquet accumsan orci, quis posuere enim. Sed consectetur leo sit amet consequat feugiat. Vivamus sed velit euismod, elementum lorem vel, mollis leo. Quisque feugiat urna facilisis, rutrum ligula sit amet, venenatis metus. Nulla facilisi.</p>
+
+			<p>Praesent ornare quis nulla eu vestibulum. Phasellus porttitor volutpat felis quis finibus. Duis porta tempus tristique. Quisque vel lectus ornare, suscipit mauris sed, hendrerit metus. Maecenas arcu tortor, dapibus lacinia dictum et, tincidunt vel justo. Fusce ornare dolor sit amet mauris vulputate eleifend. Vivamus et elit risus. Donec egestas erat nec dapibus malesuada. Curabitur semper lorem vel urna lacinia pellentesque. Donec maximus pretium neque tincidunt suscipit.</p>
+		</div>
+		<div class="third-quarter"><div class="middle-red"></div><div class="middle-blue"></div></div>
+		<div class="fourth-quarter">
+			<div class="b-blue">
+			</div><div class="b-red-1">
+			</div><div class="b-gray">
+			</div><div class="b-red-2"></div>
+		</div>
 	</body>
   </html
