--- a/second/index.html
+++ b/second/index.html
@@ -10,17 +10,28 @@
 					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum porttitor nibh urna, vel tincidunt tellus finibus sed. Cras elementum dui ut urna suscipit, nec placerat enim molestie. Sed congue lectus in velit egestas, volutpat dignissim eros congue.
 				</p>
 			</div>
-			<div class="red-btn"></div>
-			<div class="blue-btn"></div>
+			<div class="red-btn">
+				<p class="click">Click</p>
+			</div>
+			<div class="blue-btn">
+				<p class="click">Click</p>
+			</div>
 		</div>
 		<div class="main">
-			<div class="image"></div>
+			<div class="image">
+				<p class="img-txt">
+					Insert Image
+				</p>
+			</div>
 			<div class="text-2">
 				<p>
 					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum porttitor nibh urna, vel tincidunt tellus finibus sed. Cras elementum dui ut urna suscipit, nec placerat enim molestie. Sed congue lectus in velit egestas, volutpat dignissim eros congue.
 				</p>
 			</div>
 		</div>
-		<div class="footer"></div>
+		<div class="footer">
+			<a href="http://www.apple.com">Apple</a>
+			<a href="http://www.google.com">Google</a>
+		</div>
 	</body>
   </html>
